--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -10,7 +10,7 @@
 </p>
 <p>
   <strong>Image Url:</strong>
-  <%=h @product.image_url %>
+  <%=h @product.picture.url %>
 </p>
 <p>
 	<strong>Price:</strong>
