--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,10 +1,10 @@
-<% semantic_form_for @product do |f| %>
+<% semantic_form_for @product, :html => { :multipart => true } do |f| %>
 	<%= f.error_messages %>
   <% f.inputs do %>
 		<%= f.input :title, :hint => "Must be unique!" %>
 		<%= f.input :description %>
-		<%= f.input :image_url, :hint => "*.gif/*.jpg/*.png" %>
 		<%= f.input :price, :hint => "Should be at least 0.01" %>
 	<% end %>
+	<%= f.file_field :picture %>
 	<%= f.buttons %>
 <% end %>
