--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,7 +4,7 @@
   <% for product in @products %>
     <tr class="<%= cycle('list-line-odd', 'list-line-even') %>">
        <td>
-         <%= image_tag product.image_url, :class => 'list-image' %>
+         <%= image_tag product.picture.url(:small) %>
        </td>
        <td class="list-description">
          <dl>
