--- a/app/views/layouts/store.html.erb
+++ b/app/views/layouts/store.html.erb
@@ -19,6 +19,9 @@
 			The was open at <%= @time %><br />
 		</div>
 		<div id="main">
+			<% if flash[:notice] -%>
+				<div id="notice"><%= flash[:notice] %></div>
+			<% end -%>
 			<%= yield :layout %>
 		</div>
 	</div>
