--- a/app/views/layouts/store.html.erb
+++ b/app/views/layouts/store.html.erb
@@ -17,7 +17,7 @@
 			<a href="http://www..../news">News</a><br />
 			<a href="http://www..../contact">Contact</a><br />
 			The was opened at <%= @time %><br />
-			<%= "Store was opened " +  pluralize(@count, "time") if @count != nil && @count > 5 %><br />
+			<%= "Store was opened #{pluralize(@count, 'time')}" if @count && @count > 5 %><br />
 	</div>
 		<div id="main">
 			<% if flash[:notice] -%>
