--- a/public/stylesheets/depot.css
+++ b/public/stylesheets/depot.css
@@ -207,3 +207,16 @@ h1 {
   font-size: 12px;
   list-style: square;
 }
+
+/* Styles for the cart in the sidebar */
+#cart, #cart table {
+	font-size: smaller;
+	color:		 white;
+}
+
+#cart table {
+	border-top:		 1px dotted #595 ;
+	border-bottom: 1px dotted #595 ;
+	margin-bottom: 10px;
+}
+
