--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,6 +1,7 @@
 <% semantic_form_for @product, :html => { :multipart => true } do |f| %>
 	<%= f.error_messages %>
   <% f.inputs do %>
+		<%= f.input :comment_id, :label => "Product_id" %>
 		<%= f.input :title, :hint => "Must be unique!" %>
 		<%= f.input :description %>
 		<%= f.input :price, :hint => "Should be at least 0.01" %>
