--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -21,11 +21,19 @@
   <%= link_to "Edit", edit_product_path(@product) %> |
   <%= link_to "Destroy", @product, :confirm => 'Are you sure?', :method => :delete %> |
   <%= link_to "View All", products_path %> | 
-  <%= link_to "New comment", new_product_comment_path(@product) %>
 </p>
 
-<p>
+
+<div>
   <strong>Comments</strong><br/>
-<div><%= @product.comments.all.map(&:comment_body).join('</div><div>') %></div>
-<%= link_to "Answer" %><br/>
-</p>
+  <ul>
+    <% @product.comments.each do |comment| %>
+      <li>
+        <%= comment.name %>
+        <%= comment.comment_body %>
+        <%= link_to "Answer" %><br/>
+      </li>
+    <% end %>
+  </ul>
+  <%= link_to "New comment", new_product_comment_path(@product) %>
+</div>
