--- a/app/views/layouts/store.html.erb
+++ b/app/views/layouts/store.html.erb
@@ -5,7 +5,7 @@
 	<title>Pragprog Books Online Store</title>
 	<%= stylesheet_link_tag "depot", :media => "all" %>
 	<%= javascript_include_tag :defaults %>
-<head>
+</head>
 <body id="store">
 	<div id="banner">
 		<%= image_tag("logo.png") %>
