убрал лишнее поле на форме создания нового продукта. сделал вывод коментариев в виде дерева.

--- a/app/views/products/_comment.html.erb
+++ b/app/views/products/_comment.html.erb
@@ -1,11 +1,8 @@
-  <strong>Comments</strong><br/>
-  <ul>
-    <% @product.comments.each do |comment| %>
-      <li>
-        <%= comment.name %>
-        <%= comment.comment_body %>
-        <%= link_to "Answer", new_product_comment_path(@product, :reply_to => comment.id) %><br/>
-      </li>
-    <% end %>
-  </ul>
-  
+<li>
+  <strong><%= comment.name %> write <%= comment.created_at %></strong><br/>
+	<%= comment.comment_body %><br/>
+	<%= link_to "Answer", new_product_comment_path(@product, :reply_to => comment.id) %><br/><br/>
+	<ul>
+		<%= render :partial => "comment", :collection => comment.children %>
+	</ul>
+</li>
