--- a/app/views/store/_cart_item.html.erb
+++ b/app/views/store/_cart_item.html.erb
@@ -1,9 +1,9 @@
 <% if cart_item == @current_item %>
-		<tr id="current_item">
+		<tr id="current_item"></tr>
 <% else %>
-	<tr>
+		<tr>
 <% end %>
-	<td><%= cart_item.quantity %>&times;</td>
-	<td><%=h cart_item.title %></td>
-	<td class="item-price"><%= number_to_currency(cart_item.price) %></td>
-</tr>
+			<td><%= cart_item.quantity %>&times;</td>
+			<td><%=h cart_item.title %></td>
+			<td class="item-price"><%= number_to_currency(cart_item.price) %></td>
+		</tr>
