--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,12 +1,12 @@
 <h1>Your Pragmatic Catalog</h1>
 <% for product in @products -%>
   <div class="entry">
-    <%= link_to image_tag(product.picture.url), :action => 'add_to_cart', :id => product %>
+		<% form_remote_tag :url => { :action => 'add_to_cart', :id => product } do %>
+			<%= image_submit_tag(product.picture_file_name) %>
     <h3><%=h product.title %></h3>
     <%= product.description %>
     <div class="price-line">
     <span class="price"><%= number_to_currency(product.price, :unit => "$") %></span>
-		<% form_remote_tag :url => { :action => 'add_to_cart', :id => product } do %>
 			<%= submit_tag "Add to Cart" %>
 		<% end %>   
 		<%= button_to "Comments", :controller => 'products/show', :action => product.id %>
