исправил ошибку, не было кнопки создать на форме создания продукта

--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -5,4 +5,4 @@
     = f.input :description, :input_html => { :style => 'width: 40%', :rows => 3 }
     = f.input :price, :hint => "Should be at least 0.01", :input_html => { :style => 'width: 40%' }
     = f.input :picture
-  - f.buttons
+  = f.buttons
