--- a/app/views/comments/new.html.haml
+++ b/app/views/comments/new.html.haml
@@ -1,6 +1,6 @@
 %h1 New comment
 - form_for [@product, @comment] do |f|
-  = f.error_messages %>
+  = f.error_messages
   %p
     = f.label :name
     %br
@@ -10,7 +10,8 @@
     %br
     = f.text_area :comment_body, :rows => 5, :cols => 35
   %p
-    = f.hidden_field :parent_id, :value => params[:reply_to]
+    - reply_to ||= @product.comments.first.id
+    = f.hidden_field :parent_id, :value => reply_to
   %p
     = f.submit 'Create'
 = link_to 'Back'
