--- a/app/views/layouts/comments.html.haml
+++ b/app/views/layouts/comments.html.haml
@@ -2,8 +2,7 @@
 %html(xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en")
   %head
     %meta{'http-equiv' => 'Content-Type', :content => 'text/html'}/
-    %title Comments:
-      = controller.action_name
+    %title= "Comments: #{controller.action_name}"
     = stylesheet_link_tag 'scaffold'
   %body
     %p{:style => "color: green"}
