--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -18,20 +18,5 @@
   = " | "
   = link_to "View All", products_path
 
-= render :partial => 'comments/comment_list'
-
-%div
-  %h1 New comment
-  - form_remote_for [@product, @product.comments.new] do |f|
-    = f.error_messages
-    %p
-      = f.label :name
-      %br
-      = f.text_field :name
-    %p
-      = f.label "text"
-      %br
-      = f.text_area :comment_body, :rows => 5, :cols => 35
-    %p
-      = f.submit 'Create'
-= link_to 'Back'
+#comments_list
+  = render :partial => 'comments/comments_list', :locals => {:product => @product}
