--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,8 +1,8 @@
 !!! Strict
-%html(xmlns="http://www.w3.org/1999/xhtml")
+%html(xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en")
   %head
     %title= "#{h yield(:title) || "Untitled"}"
-    = stylesheet_link_tag 'application', 'formtastic'
+    = stylesheet_link_tag 'application', 'formtastic', 'formtastic_changes', :cache => "base"
     = javascript_include_tag :defaults
     = yield(:head)
     %body>
