--- a/app/views/layouts/comments.html.haml
+++ b/app/views/layouts/comments.html.haml
@@ -3,7 +3,7 @@
   %head
     %meta{'http-equiv' => 'Content-Type', :content => 'text/html'}/
     %title= "Comments: #{controller.action_name}"
-    = stylesheet_link_tag 'scaffold'
+    = stylesheet_link_tag 'scaffold', 'formtastic', 'formtastic_changes', :cache => "base"
   %body
     %p{:style => "color: green"}
       = notice
