--- a/app/views/layouts/store.html.haml
+++ b/app/views/layouts/store.html.haml
@@ -1,8 +1,8 @@
 !!!
-%html
+%html(xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en")
   %head
     %title Pragprog Books Online Store
-    = stylesheet_link_tag "depot", :media => "all"
+    = stylesheet_link_tag "depot", 'formtastic', 'formtastic_changes', :cache => "base", :media => "all"
     = javascript_include_tag :defaults
     %body#store
       #banner
