--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -8,6 +8,14 @@
         = ":"
         = f.text_field :name, :size => 40
       %div
+        = f.label "Login"
+        = ":"
+        = f.text_field :username, :size => 40
+      %div
+        = f.label :email
+        = ":"
+        = f.text_field :email, :size => 40
+      %div
         = f.label :user_password, 'Password'
         = ":"
         = f.password_field :password, :size => 40
