--- a/app/views/layouts/store.html.haml
+++ b/app/views/layouts/store.html.haml
@@ -23,9 +23,16 @@
             = link_to 'Users', :controller => 'users'
             %br
             = link_to 'Store', :controller => 'store'
-            %br
-            %br
-            = link_to 'Logout', :controller => 'admin', :action => 'logout'
+          %br
+          #user_nav
+            - if current_user
+              = link_to "Edit profile", edit_user_path(:current)
+              = " | "
+              = link_to "Logout", logout_path
+            - else
+              = link_to "Register", new_user_path
+              = " | "
+              = link_to "Login", login_path
           %br
           = "The was opened at #{@time}"
           %br
