--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -6,13 +6,21 @@
     %br
     = f.text_field :name
   %p
-    = f.label :hashed_password
+    = f.label "Login"
     %br
-    = f.text_field :hashed_password
+    = f.text_field :username
   %p
-    = f.label :salt
+    = f.label :email
     %br
-    = f.text_field :salt
+    = f.text_field :email
+  %p
+    = f.label :user_password
+    %br
+    = f.password_field :password
+  %p
+    = f.label :user_password_confirmation
+    %br
+    = f.password_field :password_confirmation
   %p
     = f.submit 'Update'
 = link_to 'Show', @user
