--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -12,11 +12,13 @@
   %strong Price:
   = number_to_currency(@product.price)
 %p
-  = link_to "Edit", edit_product_path(@product)
-  = " | "
-  = link_to "Destroy", @product, :confirm => 'Are you sure?', :method => :delete
-  = " | "
+  - if can? :update, @product
+    = link_to "Edit", edit_product_path(@product)
+    = " | "
+  - if can? :destroy, @product
+    = link_to "Destroy", @product, :confirm => 'Are you sure?', :method => :delete
+    = " | "
   = link_to "View All", products_path
 
 #comments_list
-  = render :partial => 'comments/comments_list', :locals => {:product => @product}
+= render :partial => 'comments/comments_list', :locals => {:product => @product}
