добавил категории к продуктам. подключил jstree

--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -3,6 +3,9 @@
   %strong Title:
   = "#{h @product.title }"
 %p
+  %strong Category:
+  = "#{h @product.category_id }"
+%p
   %strong Description:
   = "#{h @product.description }"
 %p
