--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
   %head
     %title= "#{h yield(:title) || "Untitled"}"
     = stylesheet_link_tag 'application', 'formtastic', 'formtastic_changes', :cache => "base"
-    = javascript_include_tag :defaults
+    = javascript_include_tag :defaults , 'jquery.jstree', 'jquery.cookie'
     = yield(:head)
     %body>
     #container
