--- a/app/views/layouts/store.html.haml
+++ b/app/views/layouts/store.html.haml
@@ -3,7 +3,7 @@
   %head
     %title Pragprog Books Online Store
     = stylesheet_link_tag "depot", 'formtastic', 'formtastic_changes', :cache => "base", :media => "all"
-    = javascript_include_tag :defaults
+    = javascript_include_tag :defaults, 'jquery.jstree', 'jquery.cookie'
     %body#store
       #banner
         = image_tag("logo.png")
@@ -23,6 +23,8 @@
             = link_to 'Users', :controller => 'users'
             %br
             = link_to 'Store', :controller => 'store'
+            %br
+            = link_to 'Categories', categories_path
           %br
           #user_nav
             - if current_user
