--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -4,4 +4,5 @@
     = f.input :description, :input_html => { :style => 'width: 40%', :rows => 3 }
     = f.input :price, :hint => "Should be at least 0.01", :input_html => { :style => 'width: 40%' }
     = f.input :picture
+    = f.input :category, :include_blank => false
   = f.buttons
