--- a/app/views/layouts/store.html.haml
+++ b/app/views/layouts/store.html.haml
@@ -3,7 +3,7 @@
   %head
     %title Pragprog Books Online Store
     = stylesheet_link_tag "depot", 'formtastic', 'formtastic_changes', :cache => "base", :media => "all"
-    = javascript_include_tag :defaults, 'jquery.jstree', 'jquery.cookie'
+    = javascript_include_tag :defaults, 'jquery.jstree', 'jquery.cookie', 'jquery.hotkeys' 
     %body#store
       #banner
         = image_tag("logo.png")
