--- a/app/views/layouts/store.html.haml
+++ b/app/views/layouts/store.html.haml
@@ -2,8 +2,8 @@
 %html(xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en")
   %head
     %title Pragprog Books Online Store
-    = stylesheet_link_tag "depot", 'formtastic', 'formtastic_changes', :cache => "base", :media => "all"
-    = javascript_include_tag :defaults, 'jquery.jstree', 'jquery.cookie', 'jquery.hotkeys' 
+    = stylesheet_link_tag "depot", 'formtastic', 'formtastic_changes', 'treegrid', :cache => "base", :media => "all"
+    = javascript_include_tag :defaults, 'jquery.jstree', 'jquery.cookie', 'jquery.hotkeys', 'jstreegrid'
     %body#store
       #banner
         = image_tag("logo.png")
