--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html(xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en")
   %head
     %title= "#{h yield(:title) || "Untitled"}"
-    = stylesheet_link_tag 'application', 'formtastic', 'formtastic_changes', :cache => "base"
+    = stylesheet_link_tag 'application', 'formtastic', 'formtastic_changes', 'treegrid', :cache => "base"
     = javascript_include_tag :defaults , 'jquery.jstree', 'jquery.cookie'
     = yield(:head)
     %body>
